import { v4 as uuidv4 } from 'uuid';
import { DeploymentConfig } from '../core/types';

/**
 * Automated model deployment system
 */
export class ModelDeployer {
  private deployments: Map<string, Deployment> = new Map();

  /**
   * Deploy a model
   */
  async deploy(modelId: string, config: DeploymentConfig): Promise<Deployment> {
    const deployment: Deployment = {
      id: uuidv4(),
      modelId,
      config,
      status: 'deploying',
      instances: [],
      metrics: {
        requests: 0,
        errors: 0,
        avgLatency: 0,
        p95Latency: 0,
        p99Latency: 0,
      },
      createdAt: new Date().toISOString(),
      updatedAt: new Date().toISOString(),
    };

    this.deployments.set(deployment.id, deployment);

    // Simulate deployment process
    await this.performDeployment(deployment);

    return deployment;
  }

  /**
   * Update deployment configuration
   */
  async updateDeployment(
    deploymentId: string,
    updates: Partial<DeploymentConfig>
  ): Promise<Deployment> {
    const deployment = this.deployments.get(deploymentId);
    if (!deployment) {
      throw new Error(`Deployment ${deploymentId} not found`);
    }

    deployment.config = { ...deployment.config, ...updates };
    deployment.status = 'updating';
    deployment.updatedAt = new Date().toISOString();

    await this.performUpdate(deployment);

    return deployment;
  }

  /**
   * Scale deployment
   */
  async scale(deploymentId: string, instanceCount: number): Promise<void> {
    const deployment = this.deployments.get(deploymentId);
    if (!deployment) {
      throw new Error(`Deployment ${deploymentId} not found`);
    }

    const { minInstances, maxInstances } = deployment.config.scaling;

    if (instanceCount < minInstances || instanceCount > maxInstances) {
      throw new Error(
        `Instance count must be between ${minInstances} and ${maxInstances}`
      );
    }

    deployment.status = 'scaling';

    // Add or remove instances
    if (instanceCount > deployment.instances.length) {
      for (let i = deployment.instances.length; i < instanceCount; i++) {
        deployment.instances.push(this.createInstance(i));
      }
    } else {
      deployment.instances = deployment.instances.slice(0, instanceCount);
    }

    deployment.status = 'active';
    deployment.updatedAt = new Date().toISOString();
  }

  /**
   * Rollback deployment
   */
  async rollback(deploymentId: string, _targetVersion?: string): Promise<void> {
    const deployment = this.deployments.get(deploymentId);
    if (!deployment) {
      throw new Error(`Deployment ${deploymentId} not found`);
    }

    deployment.status = 'rolling_back';
    deployment.updatedAt = new Date().toISOString();

    // Simulate rollback
    await this.simulateWork(1000);

    deployment.status = 'active';
    deployment.updatedAt = new Date().toISOString();
  }

  /**
   * Delete deployment
   */
  async deleteDeployment(deploymentId: string): Promise<void> {
    const deployment = this.deployments.get(deploymentId);
    if (!deployment) {
      throw new Error(`Deployment ${deploymentId} not found`);
    }

    deployment.status = 'terminating';

    // Simulate cleanup
    await this.simulateWork(500);

    this.deployments.delete(deploymentId);
  }

  /**
   * Get deployment status
   */
  getDeployment(deploymentId: string): Deployment | undefined {
    return this.deployments.get(deploymentId);
  }

  /**
   * List all deployments
   */
  listDeployments(filters?: {
    modelId?: string;
    status?: string;
    target?: string;
  }): Deployment[] {
    let deployments = Array.from(this.deployments.values());

    if (filters?.modelId) {
      deployments = deployments.filter(d => d.modelId === filters.modelId);
    }

    if (filters?.status) {
      deployments = deployments.filter(d => d.status === filters.status);
    }

    if (filters?.target) {
      deployments = deployments.filter(d => d.config.target === filters.target);
    }

    return deployments;
  }

  /**
   * Configure A/B testing
   */
  async setupABTest(config: {
    baselineDeploymentId: string;
    candidateDeploymentId: string;
    trafficSplit: number;
    duration?: number;
  }): Promise<ABTest> {
    const baseline = this.deployments.get(config.baselineDeploymentId);
    const candidate = this.deployments.get(config.candidateDeploymentId);

    if (!baseline || !candidate) {
      throw new Error('Both deployments must exist');
    }

    const test: ABTest = {
      id: uuidv4(),
      baselineDeploymentId: config.baselineDeploymentId,
      candidateDeploymentId: config.candidateDeploymentId,
      trafficSplit: config.trafficSplit,
      status: 'running',
      startTime: new Date().toISOString(),
      results: {
        baselineMetrics: { ...baseline.metrics },
        candidateMetrics: { ...candidate.metrics },
        winner: undefined,
      },
    };

    return test;
  }

  /**
   * Generate deployment API endpoint
   */
  generateEndpoint(deployment: Deployment): {
    restAPI?: string;
    websocket?: string;
    grpc?: string;
  } {
    const baseUrl = `https://api.summit.ai/models/${deployment.modelId}`;

    switch (deployment.config.target) {
      case 'rest_api':
        return {
          restAPI: `${baseUrl}/predict`,
        };
      case 'streaming':
        return {
          restAPI: `${baseUrl}/predict`,
          websocket: `wss://api.summit.ai/models/${deployment.modelId}/stream`,
        };
      case 'batch':
        return {
          restAPI: `${baseUrl}/batch`,
        };
      case 'edge':
        return {
          restAPI: `https://edge.summit.ai/models/${deployment.modelId}/predict`,
        };
      default:
        return {};
    }
  }

  /**
   * Monitor deployment health
   */
  getHealthStatus(deploymentId: string): {
    healthy: boolean;
    issues: string[];
    recommendations: string[];
  } {
    const deployment = this.deployments.get(deploymentId);
    if (!deployment) {
      throw new Error(`Deployment ${deploymentId} not found`);
    }

    const issues: string[] = [];
    const recommendations: string[] = [];

    // Check instance health
    const healthyInstances = deployment.instances.filter(i => i.status === 'healthy').length;
    const healthRatio = healthyInstances / deployment.instances.length;

    if (healthRatio < 0.5) {
      issues.push('Less than 50% of instances are healthy');
      recommendations.push('Investigate instance failures and consider rollback');
    }

    // Check error rate
    const errorRate = deployment.metrics.errors / deployment.metrics.requests;
    if (errorRate > 0.05) {
      issues.push(`High error rate: ${(errorRate * 100).toFixed(2)}%`);
      recommendations.push('Review recent model changes and input data quality');
    }

    // Check latency
    if (deployment.metrics.p95Latency > 1000) {
      issues.push(`High P95 latency: ${deployment.metrics.p95Latency}ms`);
      recommendations.push('Consider scaling up or optimizing model inference');
    }

    return {
      healthy: issues.length === 0,
      issues,
      recommendations,
    };
  }

  // Private helper methods

  private async performDeployment(deployment: Deployment): Promise<void> {
    // Simulate deployment steps
    await this.simulateWork(500);

    // Create initial instances
    for (let i = 0; i < deployment.config.scaling.minInstances; i++) {
      deployment.instances.push(this.createInstance(i));
    }

    deployment.status = 'active';
    deployment.updatedAt = new Date().toISOString();
  }

  private async performUpdate(deployment: Deployment): Promise<void> {
    // Simulate update process
    await this.simulateWork(800);

    deployment.status = 'active';
    deployment.updatedAt = new Date().toISOString();
  }

  private createInstance(index: number): DeploymentInstance {
    return {
      id: uuidv4(),
      index,
      status: 'healthy',
      cpu: Math.random() * 50 + 20,
      memory: Math.random() * 60 + 30,
      requests: 0,
      startTime: new Date().toISOString(),
    };
  }

  private async simulateWork(ms: number): Promise<void> {
    return new Promise(resolve => setTimeout(resolve, ms));
  }
}

// Types

export interface Deployment {
  id: string;
  modelId: string;
  config: DeploymentConfig;
  status: 'deploying' | 'active' | 'updating' | 'scaling' | 'rolling_back' | 'terminating' | 'failed';
  instances: DeploymentInstance[];
  metrics: {
    requests: number;
    errors: number;
    avgLatency: number;
    p95Latency: number;
    p99Latency: number;
  };
  createdAt: string;
  updatedAt: string;
  error?: string;
}

export interface DeploymentInstance {
  id: string;
  index: number;
  status: 'starting' | 'healthy' | 'unhealthy' | 'terminating';
  cpu: number;
  memory: number;
  requests: number;
  startTime: string;
}

export interface ABTest {
  id: string;
  baselineDeploymentId: string;
  candidateDeploymentId: string;
  trafficSplit: number;
  status: 'running' | 'completed' | 'cancelled';
  startTime: string;
  endTime?: string;
  results: {
    baselineMetrics: any;
    candidateMetrics: any;
    winner?: 'baseline' | 'candidate';
    confidenceLevel?: number;
  };
}
